# il2cppinterop

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: cache.rs  error.rs  lib.rs  macros.rs
core/src/mono/: mod.rs
core/src/mono/definitions/: array.rs  dictionary.rs  list.rs  mod.rs  object.rs  string.rs  stype.rs
core/src/mono/reflection/: callback.rs  class.rs  domain.rs  exports.rs  meta.rs  mod.rs  vtable.rs
core/src/mono/runtime/: gc.rs  member.rs  mod.rs  thread.rs
core/src/platform/: mem.rs  mod.rs
core/src/platform/windows/: thread.rs
core/src/unity/: behaviour.rs  camera.rs  component.rs  definitions.rs  game_object.rs  layer_mask.rs  mod.rs  mono_behaviour.rs  object.rs  rigidbody.rs  time.rs  transform.rs
core/src/utils/: debug.rs  mod.rs  relative.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  cache.rs  lib.rs
src/il2cpp/: builtin.rs  definitions.rs  engine.rs  interop.rs  mod.rs
src/il2cpp/api/: callback.rs  class.rs  domain.rs  mod.rs  thread.rs
src/il2cpp/utils/: hash.rs  mod.rs
src/platform/: mod.rs
src/unity/: mod.rs
src/unity/api/: camera.rs  component.rs  game_object.rs  layer_mask.rs  mod.rs  obfuscators.rs  object.rs  rigidbody.rs  transform.rs
src/unity/definitions/: mod.rs
src/unity/utils/: mod.rs  mono.rs
