[package]
name = "il2cppinterop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "il2cppinterop"
crate-type = ["cdylib"]

[dependencies]
log = "*"
simplelog = "*"
widestring = "1.1.0"
once_cell = "1.10.0"
lazy_static = "1.5.0"
windows = { version = "0.58.0", features = ["Win32", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Security", "Win32_System_Memory", "Win32_Security_Authentication_Identity", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem"]}