[package]
name = "il2cppinterop-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
il2cppinterop-macros = { path = "../macros" }
log = "*"
simplelog = "*"
widestring = "*"
once_cell = "*"
lazy_static = "*"
parking_lot = "*"
rayon = "*"
thiserror = "*"
getset = "*"
derive_more = { version ="*", features = ["full"] }
retour = { version = "0.3.1", features = ["static-detour"] }
udbg = { git = "https://github.com/acard0/udbg" }
windows = { version = "0.58.0", features = ["Win32", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Security", "Win32_System_Memory", "Win32_Security_Authentication_Identity", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem"]}

[features]
default = [ "unity_version_2022_3_8f1" ]
unity_version_2022_3_8f1 = []
string_encryption = []